[tool]
[tool.poetry]
name = "Inspirehep"
version = "0.1.0"
description = "The next version of INSPIRE."
license = "GPLv3"
classifiers = ["Development Status :: 4 - Beta", "Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 2", "Programming Language :: Python :: 2.7", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules"]
authors = ["CERN <admin@inspirehep.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=2.7,<3.0"
babel = "==2.*,>=2.0.0,>=2.5.1"
backoff = "==1.*,>=1.0.0,>=1.4.3"
"backports.tempfile" = ">=1.0rc1"
beard = "==0.*,>=0.0.0,>=0.2.0"
celery = {git = "https://github.com/michamos/celery.git", branch = "fix-redis-connection-result-consumer"}
click = "<7.0,==6.*,>=6.7.0"
click-spinner = "==0.*,>=0.0.0,>=0.1.8"
coverage = {version = "==4.*,>=4.0.0,>=4.5.4", optional = true}
docutils = {version = "<0.16,==0.*,>=0.15.0,>=0.15.2", optional = true}
elasticsearch = {version = "==7.1.0"}
enum34 = "==1.*,>=1.0.0,>=1.1.6"
flake8-future-import = {version = "==0.*,>=0.0.0,>=0.4.3", optional = true}
flask = "==0.*,>=0.0.0,>=0.12.4"
flask-breadcrumbs = "==0.*,>=0.0.0,>=0.4.0"
flask-celeryext = "==0.*,>=0.0.0,>=0.3.1"
flask-gravatar = "==0.*,>=0.0.0,>=0.4.2"
flask-login = "==0.*,>=0.0.0,>=0.4.0"
flask-shell-ipython = "==0.3.1"
flower = {version = "==0.*,>=0.0.0,>=0.9.2", optional = true}
freezegun = {version = "==0.*,>=0.3.0,>=0.3.11", optional = true}
fs = "==0.*,>=0.0.0,>=0.5.4"
gunicorn = {version = "==19.*,>=19.0.0,>=19.7.1", optional = true}
hepcrawl = {version = "==13.*,>=13.0.0", optional = true}
honcho = {version = "==1.*,>=1.0.0,>=1.0.1", optional = true}
idutils = "==1.*,>=1.0.0,>=1.0.1"
inspire-crawler = "==3.*,>=3.0.0"
inspire-dojson = "==63.*,>=63.0.0"
inspire-json-merger = "==11.*,>=11.0.0"
inspire-matcher = ">=9.0.1"
inspire-query-parser = "==6.*,>=6.0.0"
inspire-schemas = "==61.*,>=61.0.0"
inspire-service-orcid = "==9.*,>=9.0.0"
inspire-utils = "==3.*,>=3.0.0,>=3.0.6"
invenio-access = "==1.3.0"
invenio-accounts = "==1.1.1"
invenio-admin = "==1.1.2"
invenio-assets = "1.1.3"
invenio-base = "==1.2.0"
invenio-cache = "==1.0.0"
invenio-celery = "==1.1.0"
invenio-classifier = "==1.3.2"
invenio-config = "==1.0.2"
invenio-db = {version = "==1.0.4", extras = ["postgresql", "versioning"]}
invenio-files-rest = "==1.0.5"
invenio-indexer = "==1.1.1"
invenio-jsonschemas = "==1.0.1"
invenio-logging = "==1.1.1"
invenio-mail = "==1.0.2"
invenio-oauth2server = "==1.0.4"
invenio-oaiharvester = "==1.0.0a4"
invenio-oauthclient = "==1.1.3"
invenio-pidstore = "==1.1.0"
invenio-records = "==1.1.1"
invenio-records-files = "==1.2.1"
invenio-records-rest = "==1.6.4"
invenio-records-ui = "==1.0.1"
invenio-rest = "==1.1.3"
invenio-search = {version = "==1.2.3", extras = ["elasticsearch7"]}
invenio-userprofiles = "==1.0.1"
invenio-workflows = "==7.*,>=7.0.0,>=7.0.1"
invenio-workflows-files = "==1.*,>=1.0.0"
invenio-workflows-ui = ">=2.0.19"
ipdb = {version = "==0.*,>=0.0.0,>=0.10.3", optional = true}
jinja2 = "==2.*,>=2.0.0,>=2.10"
jsonschema = "==2.*,>=2.0.0,>=2.6.0"
kombu = "!=4.6.5,>4.5"
langdetect = "==1.*,>=1.0.0,>=1.0.7"
latexcodec = "==1.*,>=1.0.0,>=1.0.5"
marshmallow = "==2.*,>=2.0.0,>=2.15.0"
mock = {version = "==2.*,>=2.0.0", optional = true}
munkres = "<1.1.0,==1.0.*,>=1.0.12"
numpy = "==1.*,>=1.0.0,>=1.14.3"
oauthlib = "<3.0.0,>=1.1.2"
plotextractor = "==0.3.1"
pybtex = "==0.22"
pyopenssl = "==17.*,>=17.0.0,>=17.5.0"
pytest = {version = "==3.*,>=3.0.0,>=3.3.0", optional = true}
pytest-cov = {version = "==2.*,>=2.0.0,>=2.5.1", optional = true}
pytest-vcr = {version = "==0.*,>=0.0.0,>=0.3.0", optional = true}
python-redis-lock = "==3.*,>=3.0.0,>=3.2.0"
pytz = "==2018.*,>=2018.7,>=2018.7.0"
pyyaml = "<4.0"
raven = {version = "==6.*,>=6.0.0,>=6.2.1", extras = ["flask"]}
refextract = "==0.2.18"
requests = "==2.*,>=2.0.0,>=2.18.4"
requests-mock = {version = "==1.*,>=1.0.0,>=1.3.0", optional = true}
scikit-learn = "<0.21,==0.*,>=0.0.0,>=0.19.1"
setproctitle = "==1.*,>=1.0.0,>=1.1.10"
sphinx = {version = "<1.6,==1.*,>=1.0.0,>=1.5.6", optional = true}
sqlalchemy = "==1.*,>=1.0.0,>=1.2.5"
sqlalchemy-continuum = "==1.3.9"
superlance = {version = "==1.*,>=1.0.0", optional = true}
timeout-decorator = "==0.*,>=0.0.0,>=0.4.0"
tornado = {version = "==4.*,>=4.0.0,>=4.5.3", optional = true}
twisted = "<19.0.0,==18.9.*,>=18.9.0"
urllib3 = "<1.25,==1.*,>=1.0.0,>=1.24.1"
vine = "==1.*,>=1.0.0"
workflow = "==2.*,>=2.0.0,>=2.1.3"

rt = {git = "https://github.com/CZ-NIC/python-rt.git"}
sword2 = {git ="https://github.com/inspirehep/python-client-sword2.git"}
dictdiffer = {git ="https://github.com/inspirehep/dictdiffer.git"}
flask-sqlalchemy = {git = "https://github.com/inspirehep/flask-sqlalchemy.git"}
timeexecution = {git= "https://github.com/puntonim/py-timeexecution.git", branch = "lazy-init-tmp-3.4.0"}
invenio-xrootd = {version = ">=1.0.0a6", optional = true}
xrootdpyfs = {git = "https://github.com/inspirehep/xrootdpyfs.git", optional = true}
fuzzy = "1.1"

[tool.poetry.extras]
all = ["coverage", "docutils", "flake8-future-import", "flower", "freezegun", "gunicorn", "hepcrawl", "honcho", "ipdb", "mock", "pytest", "pytest-cov", "pytest-vcr", "requests-mock", "sphinx", "superlance", "tornado"]
tests = ["coverage", "flake8-future-import", "freezegun", "mock", "pytest", "pytest-cov", "pytest-vcr", "requests-mock"]
docs = ["docutils", "sphinx"]
worker-node = ["flower", "superlance", "tornado"]
web-node = ["gunicorn", "honcho"]
crawler-node = ["hepcrawl"]
build-node = ["ipdb"]
xrootd = ["xrootdpyfs", "invenio-xrootd"]
